--- a/vj4/locale/en.yaml
+++ b/vj4/locale/en.yaml
@@ -68,6 +68,7 @@ perm_discussion: Discussions
 perm_contest: Contests
 perm_training: Trainings
 perm_ranking: Ranking
+perm_user: User
 discussion_edit: Discussion Edit
 wiki_help: Help
 no_translation_warn: <blockquote class="warn">This part of content is under translation.</blockquote>
