feat: add manage_suggest_problem in domain dashboard

--- a/vj4/locale/zh_CN.yaml
+++ b/vj4/locale/zh_CN.yaml
@@ -39,6 +39,12 @@ Delete File: 删除文件
 Delete yourself file: 删除自己文件
 Cheater Manager: 作弊管理者
 Use Admin Dashboard: 使用管理员面板
+domain_manage_suggest_problem: 域推荐题目
+Add Problem: 添加题目
+Problem ID: 题目ID
+Display Title: 展示标题
+Add Recommended Problems: 添加推荐题目
+Sorry, there is no recommended problems.: 本域中没有推荐题目
 API: API
 about: 关于
 About: 关于
