--- a/vj4/locale/zh_TW.yaml
+++ b/vj4/locale/zh_TW.yaml
@@ -20,7 +20,7 @@ Privileges: 特权
 Update Privilege: 更新特权
 Badge alternate with spaces: TAG（以空格相间）
 Set badge: 设置TAG
-This user has no privileges (banned user): 这个用户没有任何权限（封禁用户）
+Basic privileges: 基础特权
 Modifying User Privileges: 修改用户特权
 Modifying User Permissions: 修改用户权限
 Use Profile: 使用个人资料
