--- a/vj4/locale/zh_CN.yaml
+++ b/vj4/locale/zh_CN.yaml
@@ -38,6 +38,7 @@ File space unlimited: 无限制的文件空间
 Delete File: 删除文件
 Delete yourself file: 删除自己文件
 Cheater Manager: 作弊管理者
+Memorial Account Manager: 纪念账号管理者
 Use Admin Dashboard: 使用管理员面板
 domain_manage_suggest_problem: 域推荐题目
 Add Problem: 添加题目
@@ -796,6 +797,7 @@ Claim homework: 认领作业
 Edit any homework: 修改任意的作业
 Edit own homework: 修改自己的作业
 Set user as Cheater: 设置用户为作弊者
+Set user as a memorial account: 将该账号设为纪念账号
 Can be Extended For: 可延期
 Open Since: 开始时间
 Hard Deadline: 最终截止时间
