--- a/vj4/locale/zh_CN.yaml
+++ b/vj4/locale/zh_CN.yaml
@@ -278,6 +278,7 @@ Vote: 投票
 Whether to show tags in the problem list.: 是否在题目列表中显示题目的标签。
 Write Your Comment: 发表您的评论
 Write Your Solution: 发表您的题解
+Write Your Updates: 发送动态
 author: 作者
 content: 内容
 current domain: 当前域
