--- a/vj4/locale/zh_CN.yaml
+++ b/vj4/locale/zh_CN.yaml
@@ -273,6 +273,7 @@ Using your AKIOI OJ universal account: 使用您的 AKIOI OJ 通用账户
 View Problem: 查看题目
 View or create discussion: 查看与发表讨论
 View or submit solution: 查看与发表题解
+"Push!": 发送！
 Visible to registered users: 对注册用户可见
 Vote: 投票
 Whether to show tags in the problem list.: 是否在题目列表中显示题目的标签。
