feat: AKIOIOJ Wiki

--- a/vj4/locale/zh_CN.yaml
+++ b/vj4/locale/zh_CN.yaml
@@ -628,7 +628,7 @@ Click here to chat with me: 点击这里与我聊天
 Terms of Service: 服务条款
 Copyright Complaint: 版权申诉
 wiki_help: 帮助
-wiki_oj: AKIOI OJ 使用
+wiki_oj: AKIOI OJ Wiki
 Discussion: 讨论
 Manager: 管理
 Ops: 运维
